[gd_scene load_steps=6 format=3 uid="uid://f0r3tla21mk7"]

[ext_resource type="ArrayMesh" uid="uid://cmvq6y34014wq" path="res://LifeBoat/Lifeboat.tres" id="1"]
[ext_resource type="PackedScene" uid="uid://dt2y5in1ethhm" path="res://LifeBoat/LifeBoat_JetStream.tscn" id="2"]
[ext_resource type="Script" path="res://LifeBoat/LifeBoat.gd" id="3"]

[sub_resource type="PhysicsMaterial" id="2"]
friction = 0.0

[sub_resource type="SphereShape3D" id="1"]

[node name="Lifeboat" type="RigidDynamicBody3D"]
mass = 1400.0
physics_material_override = SubResource( "2" )
gravity_scale = 0.0
linear_damp_mode = 1
angular_damp = 0.3
script = ExtResource( "3" )

[node name="Lifeboat" type="MeshInstance3D" parent="."]
mesh = ExtResource( "1" )

[node name="CollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1.26565, 0, 0, 0, 1.26565, 0, 0, 0, 1.26565, 0, 0, 0)
shape = SubResource( "1" )

[node name="LifeBoat_JetStream" parent="." instance=ExtResource( "2" )]
transform = Transform3D(-7.70747e-09, -6.74317e-10, 0.177, -0.0154266, 0.176326, 0, -0.176326, -0.0154266, -7.73692e-09, 0, 0.919, -1.017)
visible = false

[node name="LifeBoat_JetStream3" parent="." instance=ExtResource( "2" )]
transform = Transform3D(-0.0154266, 0.176326, -7.70747e-09, 0, -7.73692e-09, -0.177, -0.176326, -0.0154266, 6.74318e-10, 0.924, 0, -1.017)
visible = false

[node name="LifeBoat_JetStream4" parent="." instance=ExtResource( "2" )]
transform = Transform3D(0.0154266, 0.176326, -7.70747e-09, 0, -7.73692e-09, -0.177, -0.176326, 0.0154266, -6.74317e-10, -0.924, 0, -1.017)
visible = false

[node name="LifeBoat_JetStream2" parent="." instance=ExtResource( "2" )]
transform = Transform3D(-7.70747e-09, 6.74317e-10, 0.177, 0.0154266, 0.176326, 0, -0.176326, 0.0154266, -7.73692e-09, 0, -0.919, -1.017)
visible = false

[node name="Position3D" type="Position3D" parent="."]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 1.71221, -5.22615)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 1.41094, -5.175)
current = true
near = 1.0
far = 15000.0
